# magostopper

./: .gitignore  README.md  magoStopper.manifest.xml  magoStopper.py  pyproject.toml
