[project]
name = "magostopper"
version = "0.1.0"
description = ""
authors = [
    {name = "LiliumStargazer",email = "129180301+LiliumStargazer@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pynput (>=1.7.7,<2.0.0)",
    "pygetwindow (>=0.0.9,<0.0.10)",
    "psutil (>=6.1.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

